--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -25,10 +25,23 @@
           ></textarea>
         </div>
         <div class="card-footer">
+          <!--Password Settings-->
+          <div id="settings">
+            <label for="length">Length</label>
+            <input type="number" id="length" value="16" min="8" max="128" />
+            <label for="lowerc">Lowercase Characters</label>
+            <input type="checkbox" id="lowerc" checked />
+            <label for="upperc">Uppercase Characters</label>  
+            <input type="checkbox" id="upperc" checked />  
+            <label for="numbers">Include Numbers</label>
+            <input type="checkbox" id="numbers" checked />
+            <label for="symbols">Include Symbols</label>
+            <input type="checkbox" id="symbols" checked />
+          </div>
           <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
